--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,8 @@ body {
     font-family: 'Slabo 27px', serif;    
     margin-left: 60px;
     margin-right: 60px;
+    display: block;
+    margin: auto;
 
 }
 
