--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,8 @@
 body {
     background-color: ghostwhite;
     font-family: 'Slabo 27px', serif;    
-    margin-left: 60px;
-    margin-right: 60px;
+    /* margin-left: 60px;
+    margin-right: 60px; */
     display: block;
     margin: auto;
 
