--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,8 @@
 body {
     background-color: ghostwhite;
     font-family: 'Slabo 27px', serif;    
-    /* margin-left: 60px;
-    margin-right: 60px; */
+    margin-left: 60px;
+    margin-right: 60px;
     display: block;
     margin: auto;
 
@@ -65,7 +65,7 @@ hr {
     display: inline;
     padding-right: 1rem 0.5rem;
 }
-
+</div>
 .box {
     background-color: var(--off-white);
     padding: 2rem;
