--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Philosopher&display=swap');
 :root {
-    --primary-color: #3B82F6
-    ;
+    --primary-color: #3B82F6;
     --dark-green: #064E3B;
     --off-white:#cfe1f8;
 
