--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ hr {
     padding: 2rem;
     margin: 3rem auto;
     text-align: center;
-    border-radius: 4rem;
+    /* border-radius: 4rem; */
     height: 200px;
     margin-bottom: 30px;
     padding-top: 10px;
