--- a/styles.css
+++ b/styles.css
@@ -77,11 +77,11 @@ hr {
     margin: 3rem auto;
     text-align: center;
     border-radius: 4rem;
-     height: 250px;
+    height: 200px;
     /* margin-top: -50px; */
-    /* margin-bottom: 3000px;
+    margin-bottom: 40px;
     padding-top: 10px;
-    padding-bottom: 300px; */ 
+    padding-bottom: 30px;
 
     
 }
@@ -176,6 +176,16 @@ h2 {
 
 .section {
     padding: 2rem;
+    padding: 2rem;
+    margin: 3rem auto;
+    text-align: center;
+    /* border-radius: 4rem; */
+    height: 200px;
+    /* margin-top: -50px; */
+    margin-bottom: 40px;
+    padding-top: 10px;
+    padding-bottom: 30px;
+
 }
 
 h1:hover {
@@ -184,6 +194,7 @@ h1:hover {
 
 .section h1 {
     text-align: center;
+
 
 }
 
