--- a/styles.css
+++ b/styles.css
@@ -239,6 +239,17 @@ h1:hover {
 
 }
 
-/* li {
-    border-radius: 1rem;
-} */
+li {
+    padding: 2rem;
+    margin: 3rem auto;
+    text-align: center;
+    border-radius: 4rem;
+    height: 250px;
+    /* margin-top: -50px; */
+    margin-bottom: 40px;
+    padding-top: 10px;
+    padding-bottom: 30px;
+
+    
+
+}
