--- a/styles.css
+++ b/styles.css
@@ -78,10 +78,10 @@ hr {
     text-align: center;
     border-radius: 4rem;
     height: 250px;
-    /* margin-top: -50px; */
-    margin-bottom: 40px;
+    margin-top: 50px;
+    /* margin-bottom: 40px; */
     padding-top: 10px;
-    padding-bottom: 30px;
+    /* padding-bottom: 30px; */
 
     
 }
@@ -239,7 +239,7 @@ h1:hover {
 
 }
 
-li {
+.bix {
     padding: 2rem;
     margin: 3rem auto;
     text-align: center;
@@ -247,8 +247,10 @@ li {
     height: 250px;
     /* margin-top: -50px; */
     margin-bottom: 40px;
-    padding-top: 10px;
+    /* padding-top: 10px; */
     padding-bottom: 30px;
+    background-color: honeydew;
+
 
     
 
