--- a/styles.css
+++ b/styles.css
@@ -78,9 +78,9 @@ hr {
     text-align: center;
     border-radius: 4rem;
     height: 250px;
-    margin-top: 50px;
+    /* margin-top: 50px; */
     /* margin-bottom: 40px; */
-    padding-top: 10px;
+    /* padding-top: 10px; */
     /* padding-bottom: 30px; */
 
     
@@ -246,9 +246,9 @@ h1:hover {
     border-radius: 4rem;
     height: 250px;
     /* margin-top: -50px; */
-    margin-bottom: 40px;
+    /* margin-bottom: 40px; */
     /* padding-top: 10px; */
-    padding-bottom: 30px;
+    /* padding-bottom: 30px; */
     background-color: rgb(228, 236, 228);
 
 
