--- a/styles.css
+++ b/styles.css
@@ -79,9 +79,9 @@ hr {
     border-radius: 4rem;
     height: 250px;
     /* margin-top: 50px; */
-    /* margin-bottom: 40px; */
+    margin-bottom: 50px;
     /* padding-top: 10px; */
-    /* padding-bottom: 30px; */
+    padding-bottom: 50px;
 
     
 }
@@ -246,9 +246,9 @@ h1:hover {
     border-radius: 4rem;
     height: 250px;
     /* margin-top: -50px; */
-    /* margin-bottom: 40px; */
+    margin-bottom: 50px;
     /* padding-top: 10px; */
-    /* padding-bottom: 30px; */
+    padding-bottom: 50px;
     background-color: rgb(228, 236, 228);
 
 
