--- a/styles.css
+++ b/styles.css
@@ -246,7 +246,7 @@ h1:hover {
     border-radius: 4rem;
     height: 250px;
     /* margin-top: -50px; */
-    margin-bottom: 40px;
+    /* margin-bottom: 40px; */
     /* padding-top: 10px; */
     padding-bottom: 40px;
     background-color: rgb(228, 236, 228);
