--- a/styles.css
+++ b/styles.css
@@ -249,7 +249,7 @@ h1:hover {
     /* margin-bottom: 40px; */
     /* padding-top: 10px; */
     padding-bottom: 80px;
-    background-color: rgb(228, 236, 228);
+    /* background-color: rgb(228, 236, 228); */
 
 
     
