--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 :root {
     --primary-color: #3B82F6;
-    --dark-green: #064E3B;
+    --dark-green: #75d1b9;
     --off-white: #cfe1f8;
 
 }
@@ -10,10 +10,11 @@
 body {
     background-color: ghostwhite;
     font-family: 'Slabo 27px', serif;
-    margin-left: 60px;
-    margin-right: 60px;
+    margin-top: 0px;
+    margin-left: 50px;
+    margin-right: 50px;
     display: block;
-    margin: auto;
+    max-width: 100%;
 
 }
 
@@ -34,31 +35,38 @@ hr {
     
 }
 
-.link:hover {
+/* .link:hover {
     color: rgba(14, 11, 14, 0.753);
-}
+} */
 
 .link {
     box-sizing: border-box;
     text-decoration: none;
     padding: 0.5rem 1rem;
-    font-size: 1rem;
+    margin: 0.1rem;
+    /* font-size: 0.1rem; */
     /* font-style: italic; */
 }
 
 .link-primary {
+    max-width: 140x;
+    padding: 0.6rem 1.2rem;
     background-color: var(--primary-color);
-    border-radius: 1.5rem;
+    border-radius: 1rem;
     color: antiquewhite;
+    margin: 1.5rem auto;
+    border: 0.1rem solid var(--primary-color);
 
 
 }
 
 .link-secondary {
+    max-width: 140px;
+    padding: 0.6rem 1.2rem;
     color: var(--primary-color);
-    margin: 3px;
-    border-radius: 1.5rem;
-    border: 2px solid var(--primary-color);
+    margin: 1.5rem auto;
+    border-radius: 1rem;
+    border: 0.1px solid var(--primary-color);
 }
 
 .list-non-bulit {
@@ -73,15 +81,15 @@ hr {
 
 .box {
     background-color: var(--off-white);
-    padding: 2rem;
-    margin: 3rem auto;
+    padding: 1.5rem;
+    margin: 2rem auto;
     text-align: center;
-    border-radius: 4rem;
+    border-radius: 1rem;
     height: 250px;
     /* margin-top: 50px; */
-    margin-bottom: 50px;
-    /* padding-top: 10px; */
-    padding-bottom: 50px;
+    /* margin-bottom: 50px; */
+    padding-top: 0.5px;
+    padding-bottom: 0.5px;
 
     
 }
@@ -89,8 +97,9 @@ hr {
 .navigation {
     background-color: var(--primary-color);
     color: white;
-    padding: 0.5rem;
-    border-bottom-left-radius: 1rem;
+    text-decoration: none;
+    /* padding: 0.5rem; */
+    /* border-bottom-left-radius: 1rem; */
     border-radius: 2rem;
 
 
@@ -99,7 +108,9 @@ hr {
 .navigation .link {
     color: white;
     text-decoration: none;
-    font-size: 25px;
+    /* background-color: #5c94c9; */
+    border-radius: 5px;
+    /* font-size: 25px; */
 
 }
 
@@ -114,30 +125,32 @@ hr {
 .navigation .nav-brand {
     font-weight: bold;
     font-size: 40px;
-    text-align:left ;
+    /* text-align:left ; */
     /* font-family: 'Montserrat', sans-serif; */
 
 }
 
 .navigation .link-active:hover {
-    color: var(--dark-green);
+    background-color: var(--dark-green);
 }
 
 .navigation .link-active {
     font-weight: bold;
+    color:black;
 
 }
 
 header {
     display: block;
+    margin: auto;
 }
 
 p {
     margin-left: 3rem;
     margin-right: 3rem;
     text-align: center  ;
-    font-size: 20px;
-
+    /* font-size: 20px; */
+   
 }
 
 h2:hover {
@@ -145,18 +158,18 @@ h2:hover {
 }
 
 h2 {
-    margin-left: 3rem;
-    margin-right: 3rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
     text-align: center;
 }
 
 .hero {
-    padding: 2rem;
-    padding-top: 3rem;
+    padding: 1rem;
+    padding-top: 1rem;
 }
 
 .hero .hero-image {
-    max-width: 550px;
+    max-width: 500px;
     margin: auto;
     display: block;
 }
@@ -165,27 +178,31 @@ h2 {
     text-align: center;
     padding: 1rem;
     color: var(--dark-green);
-    font-size: 45px;
+    font-size: 30px;
 }
 
 .hero .hero-heading .heading-invot {
     color: var(--primary-color);
-    font-size: 45px;
+    font-size: 30px;
 
 }
 
 .section {
-    padding: 2rem;
-    padding: 2rem;
+    padding: 1rem;
+    /* padding: 2rem;
     margin: 3rem auto;
     text-align: center;
-    /* border-radius: 4rem; */
+     border-radius: 4rem; 
     height: 200px;
-    /* margin-top: -50px; */
+     margin-top: -50px; 
     margin-bottom: 40px;
     padding-top: 10px;
-    padding-bottom: 30px;
+    padding-bottom: 30px; */
 
+}
+h1{
+    text-align: center;
+    font-size: 25px;
 }
 
 h1:hover {
@@ -194,11 +211,13 @@ h1:hover {
 
 .section h1 {
     text-align: center;
+    color: var(--primary-color);
 
 
 }
 
 .ow {
+    margin-top: auto;
     background-color: var(--off-white);
     border-radius: 1rem;
 }
@@ -209,7 +228,7 @@ h1:hover {
     text-align: center;
     color: white;
     border-top-right-radius: 1rem;
-    border-radius: 2rem;
+    /* border-radius: 2rem; */
 
 
 }
@@ -220,12 +239,12 @@ h1:hover {
 
 .footer .footer-header {
     font-weight: bold;
-    font-size: 28px;
+    font-size: 20px;
     padding-left: 2rem;
-    margin-top: 0.6px;
-    margin-bottom: 6px;
-    padding-top: 3px;
-    padding-bottom: 3px;
+    /* margin-top: 0.6px; */
+    margin-bottom: 2px;
+    /* padding-top: 3px; */
+    /* padding-bottom: 3px; */
 
 }
 
@@ -239,7 +258,7 @@ h1:hover {
 
 }
 
-.bix {
+/* .bix {
     padding: 2rem;
     margin: 3rem auto;
     text-align: center;
@@ -248,10 +267,10 @@ h1:hover {
     /* margin-top: -50px; */
     /* margin-bottom: 40px; */
     /* padding-top: 10px; */
-    padding-bottom: 80px;
+    /* padding-bottom: 80px; */
     /* background-color: rgb(228, 236, 228); */
 
 
     
 
-}
+/* }  */
