--- a/styles.css
+++ b/styles.css
@@ -258,19 +258,15 @@ h1:hover {
 
 }
 
-/* .bix {
-    padding: 2rem;
-    margin: 3rem auto;
+.bix {
+    /* background-color: var(--off-white); */
+    padding: 1.5rem;
+    margin: 2rem auto;
     text-align: center;
-    border-radius: 4rem;
+    border-radius: 1rem;
     height: 250px;
-    /* margin-top: -50px; */
-    /* margin-bottom: 40px; */
-    /* padding-top: 10px; */
-    /* padding-bottom: 80px; */
-    /* background-color: rgb(228, 236, 228); */
-
-
-    
-
-/* }  */
+    /* margin-top: 50px; */
+    /* margin-bottom: 50px; */
+    padding-top: 0.5px;
+    padding-bottom: 0.5px;
+}
