--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,8 @@ hr {
     text-align: center;
     border-radius: 3rem;
     height: 250px;
+    font-size: 20px;
+
     /* margin-top: 50px; */
     /* margin-bottom: 50px; */
     padding-top: 0.5px;
@@ -193,16 +195,7 @@ h2 {
 
 .section {
     padding: 1rem;
-    /* padding: 2rem;
-    margin: 3rem auto;
-    text-align: center;
-     border-radius: 4rem; 
-    height: 200px;
-     margin-top: -50px; 
-    margin-bottom: 40px;
-    padding-top: 10px;
-    padding-bottom: 30px; */
-
+    
 }
 h1{
     text-align: center;
@@ -245,11 +238,8 @@ h1:hover {
     font-weight: bold;
     font-size: 20px;
     padding-left: 2rem;
-    /* margin-top: 0.6px; */
     margin-bottom: 2px;
-    /* padding-top: 3px; */
-    /* padding-bottom: 3px; */
-
+    
 }
 
 .footer .link:hover {
@@ -263,14 +253,12 @@ h1:hover {
 }
 
 .bix {
-    /* background-color: var(--off-white); */
     padding: 1.5rem;
     margin: 2rem auto;
     text-align: center;
     border-radius: 3rem;
     height: 250px;
-    /* margin-top: 50px; */
-    /* margin-bottom: 50px; */
+    font-size: 20px;
     padding-top: 0.5px;
     padding-bottom: 0.5px;
 }
